--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paystack/inline-js": "^2.12.6",
+    "mongodb": "^4.12.1",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
