--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.7.1",
     "react-paystack": "^4.0.1",
     "react-toastify": "^9.1.1",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "swr": "^1.3.0"
   }
 }
