--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@paystack/inline-js": "^2.12.6",
+    "axios": "^1.2.1",
     "mongodb": "^4.12.1",
     "next": "13.0.5",
     "react": "18.2.0",
